# CadetHD-chromoo

./: .gitignore  ARCHITECTURE.md  README.md  example.yaml  flake.nix  main.py  requirements.txt  setup.cfg  setup.py  shell.nix
chromoo/: __init__.py  algorithmFactory.py  cache.py  cadetSimulation.py  callback.py  chromoo  chromooProblem.py  configHandler.py  log.py  objective.py  parameter.py  plotter.py  post.py  scores.py  simulation.py  transforms.py  utils.py
docs/: README.md  doc.md
examples/10k-mono-1d-p1/: 10k-mono.mono1d.h5  config.yaml  timesteps.txt
examples/10k-mono-1d-p2/: 10k-mono.mono1d.yaml  chromatogram-from-xns.csv  config.yaml
examples/10k-mono-1d-p2-por/: chromoo.yaml
examples/10k-mono-2d-p2/: chromatogram-corrected.csv  chromatogram.y  chromoo.yaml  config.yaml
examples/10k-mono-2d-p2v/: 10k-mono.mono2d.h5  config.yaml
examples/10k-mono-2d-p2v-bulk/: 10k-mono.json  10k-mono.mono2d.h5  chromoo.yaml  config.yaml  grm2d_full_nrec164_ncol10_nrad5.txt  timesteps-corrected.txt  timesteps.txt
examples/10k-mono-2d-p2v-split_chroma/: chromoo.yaml  config.yaml
examples/10k-mono-2d-p2v-split_chroma/equidistant-5-corrected/: shell_0_corrected.csv  shell_1_corrected.csv  shell_2_corrected.csv  shell_3_corrected.csv  shell_4_corrected.csv
examples/Averaged-AC-bulk/: chromoo.yaml
examples/Averaged-AC-bulk-as-array/: chromoo.yaml  long.poly2d.yaml
examples/Averaged-AC-bulk-as-array/reference/: final  (+5 more)
scripts/: post.py  run_postproc_plot.py  transform_to_cadet_shape.py
tests/: __init__.py  testCadetSimulation.py  testConfigHandler.py
(+4 files in other folders)
