[metadata]
name = chromoo
version = 0.1
author = Jayghosh Rao
author_email = j.rao@fz-juelich.de
description = PyMOO for chromatography
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.21
    scipy>=1.7
    matplotlib>=3.4
    addict>=2.4
    gitpython>=3.1
    cadet-python>=0.11
    pymoo>=0.5
