[metadata]
name = chromoo
author = Jayghosh Rao
author_email = j.rao@fz-juelich.de
description = PyMOO for chromatography
long_description = file: README.md
long_description_content_type = text/markdown
url = https://jugit.fz-juelich.de/IBG-1/ModSim/Chroma-HD/chromoo
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
license=GPLv3
platform=posix

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.21
    matplotlib>=3.4
    addict==2.3
    cadet-python>=0.11
    pymoo==0.5
    rich>10.15
    ruamel.yaml>=0.17
    SALib
    pandas
    pandas-stubs
scripts = 
    bin/chromoo
    bin/postoo
    bin/postoo-cmp
